--- a/techstack.html
+++ b/techstack.html
@@ -9,7 +9,7 @@
   <body>
     <nav id="navbar">
       <ul id="component">
-        <li><a href="Home_page.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="techstack.html">TechStack</a></li>
         <li><a href="about.html">About Me</a></li>
         <li><a href="contact.html">Contact</a></li>
