--- a/about.html
+++ b/about.html
@@ -7,37 +7,40 @@
     <title>Document</title>
   </head>
   <body>
-    <nav id="navbar">
-      <ul id="component">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="techstack.html">TechStack</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <div class="about">
-      <div class="about-img">
-        <img src="src/80643.jpg" alt="" class="a-image" />
-      </div>
-      <div class="about-intro">
-        <h2 class="about-heading">About Me</h2>
-        <p class="content">
-          My name is Deepak, I am a 19-year-old, and I am pursuing my bachelor's
-          degree in computer application from Maharaja Agrasen university. I
-          enjoy solving LeetCode problems and currently I am looking for 
-          opportunities where I can improve and implement my skills.
-        </p>
-        <h3  id="about-fav-heading">Favorite Tech post</h3>
-        <div class="tech-posts">
+    <div class="main-about">
+      <nav class="navbar">
+        <h2>PORTFOLIO</h2>
+        <div class="navbar-part">
+          <div><a href="index.html">Home</a></div>
+          <div><a href="techstack.html">TechStack</a></div>
+          <div><a href="about.html">About</a></div>
+          <div><a href="contact.html">Contact</a></div>
+          <button class="signin-btn">Sign in</button>
+          <i class="ri-menu-line"></i>
+        </div>
+      </nav>
+      <div class="about">
+        <div class="about-img">
+          <img src="src/my-image.jpg" alt="User-image"  />
+        </div>
+        <div class="about-intro">
+          <h2 class="about-heading">About Me</h2>
+          <p class="content">
+            My name is Deepak, I am a 19-year-old, and I am pursuing my
+            bachelor's degree in computer application from Maharaja Agrasen
+            university. I enjoy solving LeetCode problems and currently I am
+            looking for opportunities where I can improve and implement my
+            skills.
+          </p>
+          <h3 id="about-fav-heading">Favorite Tech post</h3>
+          <div class="tech-posts">
             <div class="tech-post">Software Developer</div>
             <div class="tech-post">Data Analyst</div>
             <div class="tech-post">Web Developer</div>
             <div class="tech-post">Cyber Security</div>
+          </div>
         </div>
       </div>
     </div>
-    <footer class="footer">
-      <p>&copy; 2025 Deepak | All Right Reserved</p>
-    </footer>
   </body>
 </html>
