--- a/techstack.html
+++ b/techstack.html
@@ -7,14 +7,17 @@
     <title>Document</title>
   </head>
   <body>
-    <nav id="navbar">
-      <ul id="component">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="techstack.html">TechStack</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+      <nav class="navbar">
+        <h2>PORTFOLIO</h2>
+        <div class="navbar-part">
+          <div><a href="index.html">Home</a></div>
+          <div><a href="techstack.html">TechStack</a></div>
+          <div><a href="about.html">About</a></div>
+          <div><a href="contact.html">Contact</a></div>
+          <button class="signin-btn">Sign in</button>
+          <i class="ri-menu-line"></i>
+        </div>
+      </nav>
     <h1 class="tech-head">My Tech Stack</h1>
     <h2>Language:</h2>
     <div class="grid-container">
