--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
             <div class="tech-post">Web Developer</div>
             <div class="tech-post">Cyber Security</div>
           </div>
+          <button class="resume-btn">Resume</button>
         </div>
       </div>
     </div>
