--- a/techstack.html
+++ b/techstack.html
@@ -1,104 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-        <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-      <nav class="navbar">
-        <h2>PORTFOLIO</h2>
-        <div class="navbar-part">
-          <div><a href="index.html">Home</a></div>
-          <div><a href="techstack.html">TechStack</a></div>
-          <div><a href="about.html">About</a></div>
-          <div><a href="contact.html">Contact</a></div>
-          <button class="signin-btn">Sign in</button>
-          <i class="ri-menu-line"></i>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="techstack">
+    <nav class="navbar">
+      <h2>PORTFOLIO</h2>
+      <div class="navbar-part">
+        <div><a href="index.html">Home</a></div>
+        <div><a href="techstack.html">TechStack</a></div>
+        <div><a href="about.html">About</a></div>
+        <div><a href="contact.html">Contact</a></div>
+        <button class="signin-btn">Sign in</button>
+        <i class="ri-menu-line"></i>
+      </div>
+    </nav>
+    <div class="techstack-container">
+      <h1 class="tech-head">My Tech Stack</h1>
+      <h2>Language</h2>
+      <div class="grid-container">
+        <!-- Example Card -->
+        <div class="tech-card">
+          <img src="src/download.png" alt="C Logo" />
+          <h3>C</h3>
         </div>
-      </nav>
-    <h1 class="tech-head">My Tech Stack</h1>
-    <h2>Language:</h2>
-    <div class="grid-container">
-      <!-- Example Card -->
-      <div class="tech-card">
-        <img src="src/download.png" alt="C Logo" />
-        <h3>C</h3>
+        <div class="tech-card">
+          <img src="src/cpp logo.png" alt="Cpp Logo" />
+          <h3>C++</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/Python logo.png" alt="Python Logo" />
+          <h3>Python</h3>
+        </div>
+        <!-- Add more cards here -->
       </div>
-      <div class="tech-card">
-        <img src="src/cpp logo.png" alt="Cpp Logo" />
-        <h3>C++</h3>
+      <h2>Web Development</h2>
+      <h2>Front-End</h2>
+      <div class="grid-container">
+        <!-- Example Card -->
+        <div class="tech-card">
+          <img src="src/html-logo.png" alt="Html5 Logo" />
+          <h3>HTML5</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/css=logo.png" alt="CSS3 Logo" />
+          <h3>CSS3</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/javascript-logo.png" alt="JavaScript Logo" />
+          <h3>JavaScript</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/rectlogo.png" alt="React.js Logo" />
+          <h3>React.js</h3>
+        </div>
+        <!-- Add more cards here -->
       </div>
-      <div class="tech-card">
-        <img src="src/Python logo.png" alt="Python Logo" />
-        <h3>Python</h3>
+      <h2>Back-End</h2>
+      <div class="grid-container">
+        <!-- Example Card -->
+        <div class="tech-card">
+          <img src="src/node.js-logo.png" alt="Node.js Logo" />
+          <h3>Node.js</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/express.js-logo.png" alt="Express.js Logo" />
+          <h3>Express.js</h3>
+        </div>
+        <!-- Add more cards here -->
       </div>
-      <!-- Add more cards here -->
+      <h2>Databases:</h2>
+      <div class="grid-container">
+        <!-- Example Card -->
+        <div class="tech-card">
+          <img src="src/sql-logo.png" alt="SQL Logo" />
+          <h3>SQL</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/mangodb-logo.png" alt="MangoDB Logo" />
+          <h3>MangoDB</h3>
+        </div>
+        <!-- Add more cards here -->
+      </div>
+      <h2>Python Framework & Libraries:</h2>
+      <div class="grid-container">
+        <!-- Example Card -->
+        <div class="tech-card">
+          <img src="src/streamlit-logo.png" alt="Streamlit Logo" />
+          <h3>Streamlit</h3>
+        </div>
+      </div>
     </div>
-    <h2>Web Development:</h2>
-    <h2>Front-End Language</h2>
-    <div class="grid-container">
-      <!-- Example Card -->
-      <div class="tech-card">
-        <img src="src/html-logo.png" alt="Html5 Logo" />
-        <h3>HTML5</h3>
-      </div>
-      <div class="tech-card">
-        <img src="src/css=logo.png" alt="CSS3 Logo" />
-        <h3>CSS3</h3>
-      </div>
-      <div class="tech-card">
-        <img src="src/javascript-logo.png" alt="JavaScript Logo" />
-        <h3>JavaScript</h3>
-      </div>
-      <div class="tech-card">
-        <img src="src/rectlogo.png" alt="React.js Logo" />
-        <h3>React.js</h3>
-      </div>
-      <!-- Add more cards here -->
-    </div>
-    <h2>Back-End Language</h2>
-    <div class="grid-container">
-      <!-- Example Card -->
-      <div class="tech-card">
-        <img src="src/node.js-logo.png" alt="Node.js Logo" />
-        <h3>Node.js</h3>
-      </div>
-      <div class="tech-card">
-        <img src="src/express.js-logo.png" alt="Express.js Logo" />
-        <h3>Express.js</h3>
-      </div>
-      <!-- Add more cards here -->
-    </div>
-    <h2>Databases:</h2>
-    <div class="grid-container">
-      <!-- Example Card -->
-      <div class="tech-card">
-        <img src="src/sql-logo.png" alt="SQL Logo" />
-        <h3>SQL</h3>
-      </div>
-      <div class="tech-card">
-        <img src="src/mangodb-logo.png" alt="MangoDB Logo" />
-        <h3>MangoDB</h3>
-      </div>
-      <!-- Add more cards here -->
-    </div>
-    <h2>Python Framework & Libraries:</h2>
-    <div class="grid-container">
-      <!-- Example Card -->
-      <div class="tech-card">
-        <img src="src/streamlit-logo.png" alt="Streamlit Logo" />
-        <h3>Streamlit</h3>
-      </div>
-      <!-- Add more cards here -->
-    </div>
-    <footer>
-      <p>&copy; 2025 Deepak | All Right Reserved</p>
-    </footer>
-  </body>
+  </div>
+</body>
 </html>
