--- a/index.html
+++ b/index.html
@@ -1,42 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <title>Portofolio</title>
-  </head>
-  <body>
-    <div class="main">
-      <nav class="navbar">
-        <h2>PORTFOLIO</h2>
-        <div class="navbar-part">
-          <div><a href="index.html">Home</a></div>
-          <div><a href="techstack.html">TechStack</a></div>
-          <div><a href="about.html">About</a></div>
-          <div><a href="contact.html">Contact</a></div>
-          <button class="signin-btn">Sign in</button>
-          <i class="ri-menu-line"></i>
-        </div>
-      </nav>
-      <div class="main-section">
-        <div class="intro">
-          <h2>Hello I'm <span>Deepak</span> I'm a
-          <span id="Web">Web Developer</span></h2>
-          <button class="contact-btn">Contact</button>
-          <div class="icon">
-            <i class="ri-github-fill"></i>
-            <i class="ri-linkedin-fill"></i>
-          </div>
-        </div>
-        <div class="logo">
-          <img src="src/manOnTable.svg" alt="">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+  <title>Portofolio</title>
+  <style>
+    /* Global styles */
+    
+
+    
+
+    /* Sidebar for mobile */
+
+
+
+
+    /* Responsive */
+  </style>
+</head>
+<body>
+  <div class="main">
+    <nav class="navbar">
+      <h2>PORTFOLIO</h2>
+      <div class="navbar-links">
+        <div><a href="index.html">Home</a></div>
+        <div><a href="techstack.html">TechStack</a></div>
+        <div><a href="about.html">About</a></div>
+        <div><a href="contact.html">Contact</a></div>
+        <button class="signin-btn">Sign in</button>
+      </div>
+      <i class="ri-menu-line" id="menu-btn"></i>
+    </nav>
+    <div id="mobile-menu">
+      <button class="close-btn" id="close-btn">&times;</button>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="techstack.html">TechStack</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <div class="main-section">
+      <div class="intro">
+        <h2>Hello I'm <span>Deepak</span> I'm a
+          <span id="Web">Web Developer</span>
+        </h2>
+        <button class="contact-btn">Contact</button>
+        <div class="icon">
+          <i class="ri-github-fill"></i>
+          <i class="ri-linkedin-fill"></i>
         </div>
       </div>
+      <div class="logo">
+        <img src="src/manOnTable.svg" alt="">
+      </div>
     </div>
-  </body>
+  </div>
+  <script src="logic.js"></script>
+</body>
 </html>
