--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
     </div>
     <div class="main-section">
       <div class="intro">
-        <h2>Hello I'm <span>Deepak</span> I'm a
+        <h2>Hi, I'm <span id="name">Deepak</span> a passionate
           <span id="Web">Web Developer</span>
         </h2>
+        <p class="subheading">Turning ideas into interactive 
+          web experiences
+        </p>
         <button class="contact-btn">Contact</button>
         <div class="icon">
           <i class="ri-github-fill"></i>
