--- a/index.html
+++ b/index.html
@@ -59,6 +59,114 @@
         <img src="src/manOnTable.svg" alt="">
       </div>
     </div>
+    <section class="about">
+        <div class="about-img">
+          <img src="src/my-image.jpg" alt="User-image"  />
+        </div>
+        <div class="about-intro">
+          <h2 class="about-heading">About Me</h2>
+          <p class="content">
+            My name is Deepak, I am a 19-year-old, and I am pursuing my
+            bachelor's degree in computer application from Maharaja Agrasen
+            university. I enjoy solving LeetCode problems and currently I am
+            looking for opportunities where I can improve and implement my
+            skills.
+          </p>
+          <h3 id="about-fav-heading">Favorite Tech post</h3>
+          <div class="tech-posts">
+            <div class="tech-post">Software Developer</div>
+            <div class="tech-post">Data Analyst</div>
+            <div class="tech-post">Web Developer</div>
+            <div class="tech-post">Cyber Security</div>
+          </div>
+          <button class="resume-btn">Resume</button>
+        </div>
+    </section> 
+    <section class="techstack-container">
+      <h1 class="tech-head">My Tech Stack</h1>
+      <h2>Language</h2>
+      <div class="grid-container">
+        <!-- Example Card -->
+        <div class="tech-card">
+          <img src="src/download.png" alt="C Logo" />
+          <h3>C</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/cpp logo.png" alt="Cpp Logo" />
+          <h3>C++</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/Python logo.png" alt="Python Logo" />
+          <h3>Python</h3>
+        </div>
+        <!-- Add more cards here -->
+      </div>
+      <h2>Web Development</h2>
+      <h2>Front-End</h2>
+      <div class="grid-container">
+        <!-- Example Card -->
+        <div class="tech-card">
+          <img src="src/html-logo.png" alt="Html5 Logo" />
+          <h3>HTML5</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/css=logo.png" alt="CSS3 Logo" />
+          <h3>CSS3</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/javascript-logo.png" alt="JavaScript Logo" />
+          <h3>JavaScript</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/rectlogo.png" alt="React.js Logo" />
+          <h3>React.js</h3>
+        </div>
+        <!-- Add more cards here -->
+      </div>
+      <h2>Back-End</h2>
+      <div class="grid-container">
+        <!-- Example Card -->
+        <div class="tech-card">
+          <img src="src/node.js-logo.png" alt="Node.js Logo" />
+          <h3>Node.js</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/express.js-logo.png" alt="Express.js Logo" />
+          <h3>Express.js</h3>
+        </div>
+        <!-- Add more cards here -->
+      </div>
+      <h2>Databases:</h2>
+      <div class="grid-container">
+        <!-- Example Card -->
+        <div class="tech-card">
+          <img src="src/sql-logo.png" alt="SQL Logo" />
+          <h3>SQL</h3>
+        </div>
+        <div class="tech-card">
+          <img src="src/mangodb-logo.png" alt="MangoDB Logo" />
+          <h3>MangoDB</h3>
+        </div>
+        <!-- Add more cards here -->
+      </div>
+      <h2>Python Framework & Libraries:</h2>
+      <div class="grid-container">
+        <!-- Example Card -->
+        <div class="tech-card">
+          <img src="src/streamlit-logo.png" alt="Streamlit Logo" />
+          <h3>Streamlit</h3>
+        </div>
+      </div>
+    </section>
+    <section class="Contact-form">
+      <h1 >Contact</h1>
+      <form action="">
+          <input id="name" type="text" name="Name" placeholder="Name">
+          <input id="email" type="email" name="Email id" placeholder="Email id">
+          <textarea name="Meassage" id="Message" rows="4" placeholder="Message"></textarea>
+          <button class="send-btn">Send message</button>
+      </form>
+    </section>
   </div>
   <script src="logic.js"></script>
 </body>
